Project

General

Profile

Actions

Bug #12313

closed

[DOC] Fix two code samples

Bug #12313: [DOC] Fix two code samples

Added by stomar (Marcus Stollsteimer) over 10 years ago. Updated over 10 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.3.0p0 (2015-12-25 revision 53290) [i686-linux]
[ruby-core:75147]

Description

Two tiny fixes of code samples, in Encoding and BigDecimal.


Files

doc-small-code-sample-fix.patch (776 Bytes) doc-small-code-sample-fix.patch stomar (Marcus Stollsteimer), 04/23/2016 03:55 PM

Updated by jjab92@hotmail.com (Juan Jose Aparicio Bermudez) over 10 years ago Actions #1 [ruby-core:75148]

  • File mypayload.swf added

Updated by jjab92@hotmail.com (Juan Jose Aparicio Bermudez) over 10 years ago Actions #2

  • File deleted (mypayload.swf)

Updated by jjab92@hotmail.com (Juan Jose Aparicio Bermudez) over 10 years ago Actions #3 [ruby-core:75150]

  • File uploadxss - copia.html added

Updated by jjab92@hotmail.com (Juan Jose Aparicio Bermudez) over 10 years ago Actions #4

  • File deleted (uploadxss - copia.html)

Updated by jjab92@hotmail.com (Juan Jose Aparicio Bermudez) over 10 years ago Actions #5 [ruby-core:75151]

  • File mypayload.swf added

Updated by stomar (Marcus Stollsteimer) over 10 years ago Actions #6

  • File deleted (mypayload.swf)

Updated by hsbt (Hiroshi SHIBATA) over 10 years ago Actions #7

  • Status changed from Open to Closed

Applied in changeset r54755.


  • encoding.c: Fix return value of Encoding::ISO8859_1.name
    [Bug #12313][ruby-core:75147][ci skip]
  • ext/bigdecimal/bigdecimal.c: Fix code sample of BigDecimal.new

Updated by hsbt (Hiroshi SHIBATA) over 10 years ago Actions #8 [ruby-core:75168]

  • Backport changed from 2.1: UNKNOWN, 2.2: UNKNOWN, 2.3: UNKNOWN to 2.1: DONTNEED, 2.2: REQUIRED, 2.3: REQUIRED

Updated by nagachika (Tomoyuki Chikanaga) over 10 years ago Actions #9 [ruby-core:75178]

  • Backport changed from 2.1: DONTNEED, 2.2: REQUIRED, 2.3: REQUIRED to 2.1: DONTNEED, 2.2: REQUIRED, 2.3: DONE

ruby_2_3 r54765 merged revision(s) 54755.

Updated by usa (Usaku NAKAMURA) over 10 years ago Actions #10 [ruby-core:75188]

  • Backport changed from 2.1: DONTNEED, 2.2: REQUIRED, 2.3: DONE to 2.1: DONTNEED, 2.2: DONE, 2.3: DONE

ruby_2_2 r54772 merged revision(s) 54755.

Actions

Also available in: PDF Atom